# capstone-research-backend-exchange-layer

./: .flaskenv  README.md  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: test.yml
dummy_server/controllers/: recognize.py
dummy_server/entities/: image.py
dummy_server/entities/recognitions/: emotion_enum.py  emotion_evaluated.py
dummy_server/entities/responses/: response_base.py
dummy_server/routes/: static.py
dummy_server/routes/api/: __init__.py  recongize.py
dummy_server/schemata/requests/: recognize.py
dummy_server/schemata/responses/: response_base.py
tests/: conftest.py  test_api_recognize.py
